kubernetes/_base/networking/policies/backend/allow-inbound-on-port-backend-is-listening-on.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-on-port-backend-is-listening-on
  labels:
    app: color-api

spec:
  podSelector:
    matchLabels:
      app: color-api
      tier: backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - ipBlock:
            cidr: 35.191.0.0/16
        - ipBlock:
            cidr: 130.211.0.0/22

      ports:
        - port: 80
          protocol: TCP
